se modifica la clase ejecutar para que pueda correr adb en MacOS